Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40409

Mac: Qt in plugin cause crash in qt_cocoa_change_implementation

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0
    • 5.3.1
    • QPA
    • OS X 10.9
    • macOS
    • 1126701f8c459b92aee8a08befaf8e4ec216fd46

      When Qt is loaded in plugin it may crash to qt_cocoa_change_implementation of [NSApplication sendEvent:] while it's active (and locked) on the stack.

      Workaround is to comment out qt_redirectNSApplicationSendEvent() in qcocoaintegration:285. Side effect is that nativeeventfilter is not usable.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tim Tim Blechmann (Inactive)
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: