cocoa: don't override NSApplication-sendEvent if configured as AA_MacPluginApplication

Change-Id: I48cebbcb814ee8e97583c3165e7cb668077cfbad
Task-number: QTBUG-40409
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>

cregit: 1126701f8c459b92aee8a08befaf8e4ec216fd46 https://github.com/qt/qtbase/commit/1126701f8c459b92aee8a08befaf8e4ec216fd46